# Pedestrian_detection_Haar_Adaboost

./: README.md
Pedestrian_Detection_Adaboost/: CMakeLists.txt  main.cpp
Pedestrian_Detection_Adaboost/SampleInfo/: neg.txt
Pedestrian_Detection_Adaboost/include/: Pedestrian_Detection_Adaboost_Detector.hpp
